--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=couponnext
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=ds011369-a.mlab.com
+spring.data.mongodb.port=11369
 server.port=8090
 #debug=true
