--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.data.mongodb.database=couponnext
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-#spring.data.mongodb.username=
-#spring.data.mongodb.password=
+
+spring.data.mongodb.database=mongo_coupon_spring
+spring.data.mongodb.host=ds011389-a.mlab.com
+spring.data.mongodb.port=11389
+spring.data.mongodb.username=mcoupon
+spring.data.mongodb.password=IronMan4
 server.port=8090
 #debug=true
